fix row gap

--- a/src/components/atoms/JobItem/JobItem.module.scss
+++ b/src/components/atoms/JobItem/JobItem.module.scss
@@ -48,10 +48,6 @@
       border: unset;
     }
 
-    @media (min-width: $screen-lg) {
-      row-gap: 20px;
-    }
-
     .mainInfoWrapper {
       display: flex;
       align-items: center;
